unpackaged/objects/Forecasting__c.object
<CustomObject>
  <description>Forecasting test for France</description>
  <fields>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Forecasting</relationshipLabel>
    <relationshipName>Forecasting</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>Est_Volume_Apr__c</fullName>
    <label>Est Volume Apr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_Volume_Aug__c</fullName>
    <label>Est Volume Aug</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_Volume_Dec__c</fullName>
    <label>Est Volume Dec</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_Volume_Feb__c</fullName>
    <label>Est Volume Feb</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_Volume_Full_Year__c</fullName>
    <formula>Est_Volume_Jan__c +  Est_Volume_Feb__c + Est_Volume_Mar__c + Est_Volume_Apr__c + Est_Volume_May__c + Est_Volume_Jun__c + Est_Volume_Jul__c + Est_Volume_Aug__c + Est_Volume_Sep__c + Est_Volume_Oct__c + Est_Volume_Nov__c + Est_Volume_Dec__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est Volume (Full Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_Volume_Jan__c</fullName>
    <label>Est Volume Jan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_Volume_Jul__c</fullName>
    <label>Est Volume Jul</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_Volume_Jun__c</fullName>
    <label>Est Volume Jun</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_Volume_Mar__c</fullName>
    <label>Est Volume Mar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_Volume_May__c</fullName>
    <label>Est Volume May</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_Volume_Nov__c</fullName>
    <label>Est Volume Nov</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_Volume_Oct__c</fullName>
    <label>Est Volume Oct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_Volume_Quarter_1__c</fullName>
    <label>Est Volume Quarter 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_Volume_Quarter_2__c</fullName>
    <label>Est Volume Quarter 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_Volume_Quarter_3__c</fullName>
    <label>Est Volume Quarter 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_Volume_Sep__c</fullName>
    <label>Est Volume Sep</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Forecasting_Year__c</fullName>
    <label>Forecasting Year</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>2015</fullName>
        </value>
        <value>
          <fullName>2016</fullName>
        </value>
        <value>
          <fullName>2017</fullName>
        </value>
        <value>
          <fullName>2018</fullName>
          <default>true</default>
          <label>2018</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>My_Territories_Account__c</fullName>
    <formula>Account__r.My_Territories_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Territories Account?</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Note__c</fullName>
    <label>Note</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Product_Group__c</fullName>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Implants</fullName>
        </value>
        <value>
          <fullName>ATL Abutments</fullName>
        </value>
        <value>
          <fullName>ATL ISUS</fullName>
        </value>
        <value>
          <fullName>SIMPLANT Guides</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <label>Forecasting</label>
  <listViews>
    <fullName>All</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Est_Volume_Quarter_1__c</columns>
    <columns>Est_Volume_Quarter_2__c</columns>
    <columns>Est_Volume_Quarter_3__c</columns>
    <columns>Est_Volume_Quarter_4__c</columns>
    <columns>Est_Volume_Full_Year__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>My_ATL_Abut_Forecasting</fullName>
    <columns>Account__c</columns>
    <columns>Forecasting_Year__c</columns>
    <columns>Est_Volume_Jan__c</columns>
    <columns>Est_Volume_Feb__c</columns>
    <columns>Est_Volume_Mar__c</columns>
    <columns>Est_Volume_Apr__c</columns>
    <columns>Est_Volume_May__c</columns>
    <columns>Est_Volume_Jun__c</columns>
    <columns>Est_Volume_Jul__c</columns>
    <columns>Est_Volume_Aug__c</columns>
    <columns>Est_Volume_Sep__c</columns>
    <columns>Est_Volume_Oct__c</columns>
    <columns>Est_Volume_Nov__c</columns>
    <columns>Est_Volume_Dec__c</columns>
    <columns>Est_Volume_Full_Year__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
      <field>Product_Group__c</field>
      <operation>equals</operation>
      <value>ATL Abutments</value>
    </filters>
    <label>My ATL Abut Forecasting</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>My_ATL_ISUS_Forecasting</fullName>
    <columns>Account__c</columns>
    <columns>Forecasting_Year__c</columns>
    <columns>Est_Volume_Jan__c</columns>
    <columns>Est_Volume_Feb__c</columns>
    <columns>Est_Volume_Mar__c</columns>
    <columns>Est_Volume_Apr__c</columns>
    <columns>Est_Volume_May__c</columns>
    <columns>Est_Volume_Jun__c</columns>
    <columns>Est_Volume_Jul__c</columns>
    <columns>Est_Volume_Aug__c</columns>
    <columns>Est_Volume_Sep__c</columns>
    <columns>Est_Volume_Oct__c</columns>
    <columns>Est_Volume_Nov__c</columns>
    <columns>Est_Volume_Dec__c</columns>
    <columns>Est_Volume_Full_Year__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
      <field>Product_Group__c</field>
      <operation>equals</operation>
      <value>ATL ISUS</value>
    </filters>
    <label>My ATL ISUS Forecasting</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>My_Implants_Forecasting</fullName>
    <columns>Account__c</columns>
    <columns>Forecasting_Year__c</columns>
    <columns>Est_Volume_Jan__c</columns>
    <columns>Est_Volume_Feb__c</columns>
    <columns>Est_Volume_Mar__c</columns>
    <columns>Est_Volume_Apr__c</columns>
    <columns>Est_Volume_May__c</columns>
    <columns>Est_Volume_Jun__c</columns>
    <columns>Est_Volume_Jul__c</columns>
    <columns>Est_Volume_Aug__c</columns>
    <columns>Est_Volume_Sep__c</columns>
    <columns>Est_Volume_Oct__c</columns>
    <columns>Est_Volume_Nov__c</columns>
    <columns>Est_Volume_Dec__c</columns>
    <columns>Est_Volume_Full_Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Product_Group__c</field>
      <operation>equals</operation>
      <value>Implants</value>
    </filters>
    <filters>
      <field>My_Territories_Account__c</field>
      <operation>equals</operation>
      <value>True</value>
    </filters>
    <label>My Implants Forecasting</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>My_Implants_Forecasting_CY</fullName>
    <columns>Account__c</columns>
    <columns>Forecasting_Year__c</columns>
    <columns>Est_Volume_Jan__c</columns>
    <columns>Est_Volume_Feb__c</columns>
    <columns>Est_Volume_Mar__c</columns>
    <columns>Est_Volume_Apr__c</columns>
    <columns>Est_Volume_May__c</columns>
    <columns>Est_Volume_Jun__c</columns>
    <columns>Est_Volume_Jul__c</columns>
    <columns>Est_Volume_Aug__c</columns>
    <columns>Est_Volume_Sep__c</columns>
    <columns>Est_Volume_Oct__c</columns>
    <columns>Est_Volume_Nov__c</columns>
    <columns>Est_Volume_Dec__c</columns>
    <columns>Est_Volume_Full_Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Product_Group__c</field>
      <operation>equals</operation>
      <value>Implants</value>
    </filters>
    <filters>
      <field>Forecasting_Year__c</field>
      <operation>equals</operation>
      <value>2018</value>
    </filters>
    <filters>
      <field>My_Territories_Account__c</field>
      <operation>equals</operation>
      <value>True</value>
    </filters>
    <label>My Implants Forecasting Current Year</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>My_SIMPLANT_Guides_Forecasting</fullName>
    <columns>Account__c</columns>
    <columns>Forecasting_Year__c</columns>
    <columns>Est_Volume_Jan__c</columns>
    <columns>Est_Volume_Feb__c</columns>
    <columns>Est_Volume_Mar__c</columns>
    <columns>Est_Volume_Apr__c</columns>
    <columns>Est_Volume_May__c</columns>
    <columns>Est_Volume_Jun__c</columns>
    <columns>Est_Volume_Jul__c</columns>
    <columns>Est_Volume_Aug__c</columns>
    <columns>Est_Volume_Sep__c</columns>
    <columns>Est_Volume_Oct__c</columns>
    <columns>Est_Volume_Nov__c</columns>
    <columns>Est_Volume_Dec__c</columns>
    <columns>Est_Volume_Full_Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Product_Group__c</field>
      <operation>equals</operation>
      <value>SIMPLANT Guides</value>
    </filters>
    <filters>
      <field>My_Territories_Account__c</field>
      <operation>equals</operation>
      <value>True</value>
    </filters>
    <label>My SIMPLANT Guides Forecasting</label>
    <language>en_US</language>
  </listViews>
  <nameField>
    <displayFormat>{000000}</displayFormat>
    <label>Reference id</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Forecasting</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>